fixes #22 collapsed chat events, fixes #25 ability to view a full chat log

--- a/public/main.css
+++ b/public/main.css
@@ -184,7 +184,7 @@ button:focus {
     padding: 7px;
     background-color: rgba(0, 0, 0, .5);
     text-align: center;
-    filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, .5));
+    filter: drop-shadow(0px 10px 5px rgba(0, 0, 0, .7));
     transform: translate(-50%, -50%); /* this puts the "origin" of the element in the center. */
 }
 
@@ -201,7 +201,7 @@ button:focus {
     flex-grow:1;
 }
 
-.chatLog {
+.shortChatLog {
     position: absolute;
     bottom: 0;
     width:100%; /* important because if you have 1 message that cannot be wrapped, it will make the chat log area grow wider, and everyone's messages will get cutoff. this allows other long messages to still wrap.*/
@@ -209,13 +209,35 @@ button:focus {
     color: #aaa;
     pointer-events: none;
 
-    -webkit-mask-image: linear-gradient(transparent, transparent 40%, rgba(0, 0, 0, 1.0) 60%, rgba(0, 0, 0, 1.0));
+    -webkit-mask-image: linear-gradient(transparent, transparent 25%, rgba(0, 0, 0, 1.0) 60%, rgba(0, 0, 0, 1.0));
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
 
+
+.fullChatLog {
+    overflow-y: scroll;
+    position: absolute;
+    bottom: 0;
+    width:100%; /* important because if you have 1 message that cannot be wrapped, it will make the chat log area grow wider, and everyone's messages will get cutoff. this allows other long messages to still wrap.*/
+    /*text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;/*stroke*/
+    color: #aaa;
+    background-color: #000000d4;
+
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+button.switchChatView
+{
+    position:absolute;
+    top:0;
+    right:40px;
+}
 
 #pianoArea {
     overflow-y:hidden;
@@ -260,6 +282,7 @@ button:focus {
 .chatLogEntryPart {
 }
 
+.chatLogEntryAggregate,
 .chatLogEntryNick,
 .chatLogEntryJoin,
 .chatLogEntryPart {
@@ -287,6 +310,11 @@ button.muteButton:focus
   .cheer {
     position:absolute;
     pointer-events:none;
+  }
+  #cheerControl {
+      position:absolute;
+      top:0;
+      left:0;
   }
   #cheerControl input[type="text" i] {
       width:2em;
